save changes before switching