@@ -108,8 +108,9 @@
                 <configuration>
                     <!-- Prefer using <release> which sets both source/target and the bootstrap classpath -->
                     <release>${maven.compiler.release}</release>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
